ispCP ω 1.0.5 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2010-04-01 Laurent Declercq
	- GUI:
		* Fixed #2313: adding hosting plan is broken

2010-03-31 Jochen Manz
	- RELEASE ispCP ω Omega 1.0.5
	- CONFIGS:
		* Updated the BuildDate for every distributio

2010-03-31 Benedikt Heintel
	- CONFIGS:
		* Fixed #2312: [FreeBSD] Small improvment to INSTALL File

2010-03-31 Laurent Declercq
	- DISTS:
		* [FreeBSD] Fixed: Unable to hide `rkhunter` output with common 
			I/O redirections in the `postinst` script
		* [FreeBSD] The make process must copy the files in `/tmp` by default
		* [FreeBSD] Removed useless code and some other changes in the `postinst`
			script
		* [FreeBSD] Fixed #2311: Add "screen" to Packages list
		* [FreeBSD] Fixed #2309: Updated INSTALL File
		* [freeBSD] Fixed: Bind don't start automatically
		* [OpenSuse] /etc/apache2/sysconfig.d/include.conf not created by
			/usr/sbin/httpd2
	- SETUP:
		* Fixed: '/usr/local/etc/postfix/ispcp/{aliases,domains,mailboxes,
			transport,sender-access}: No such file or directory' (On freeBSD)
		* Make some I/O redirections FreeBSD compatible

2010-03-30 Laurent Declercq
	- DISTS:
		* [FreeBSD] Added post installation script (Thank to Bene)
		* [FreeBSD] Missing instructions in the postfix/BSDmakefile file
		* [FreeBSD] Fixed: Wrong php cli binary path
		* [FreeBSD] Fixed: open_basedir restriction in effect (GUI)
		* [OpenSuse] Updated INSTALL file
		* [OpenSuse] Fixed #2298: OpenSuSe - Maintainer tasks (ispCP 1.0.5):
			- Replaced insserv by the frontend `chkconfig` in the post
				installation script to ensure that all services are started at
				level 3 and 5
			- Ensured that `mysql` is running before `ispcp_network` and disabled
				after if at boot
			- Disabled proftpd xinetd (Should be only in standalone mode
			- Re-builded the services list used by IspCP in the `postinst` script
	- SETUP
		* Added conditional statement to test existence of ispcp.conf file in
			the set-engine-permissions.sh script